created config connection.js

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "module-13-challenge-orm",
+  "name": "ecommerce-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "A backend management application to help with e-commerce product management.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,11 +11,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+    "url": "git@github.com:p-hsu/e.commerce-backend.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Pamela Hsu",
+  "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.3"
   },
